<resources>
    <string name="app_name">NCP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NCP</string>
    <string name="nav_header_subtitle">by Scryp.ru</string>
    <string name="nav_header_desc">NCP</string>
    <string name="action_settings">Settings</string>
    <string name="email_auth_transition">Animation</string>

    <string name="menu_home">Линейный график</string>
    <string name="menu_gallery">Столбчатая диаграмма</string>
    <string name="menu_slideshow">Хранилище</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_share">Обратная связь</string>
    <string name="menu_send">Тест-Сервер</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <!--<string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>-->

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Недопустимое имя пользователя</string>
    <string name="invalid_password">Пароль должен содержать не менее 5 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Загрузки</string>
    <string name="title_activity_send_file">Отправка данных</string>
    <string name="reload_program_data">Обновить</string>
    <string name="load_data">Загрузить данные</string>
    <string name="share_server_data">Поделиться</string>
</resources>
