<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Графики">
            <menu>
                <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_linear"
                    app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_stack"
                app:actionViewClass="android.widget.TextView"
                android:title="@string/menu_gallery" /></menu></item>
        <item android:title="Службы">
            <menu><item
                android:id="@+id/nav_slideshow"
                app:actionViewClass="android.widget.TextView"
                android:icon="@drawable/ic_menu_bank"
                android:title="@string/menu_slideshow" />
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_menu_settings"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/menu_tools" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_feedback"
                    app:actionViewClass="android.widget.TextView"
                    android:title="@string/menu_share" /></menu>
            </item>
        <item android:title="Copyright ©2021 Scryp.ru"
              android:enabled="false"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    </group>

</menu>
