<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="wertexpro.fvds.svaroggraphs.ui.home.HomeFragment"
        android:label="@string/menu_home"

        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="wertexpro.fvds.svaroggraphs.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="wertexpro.fvds.svaroggraphs.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_tools"
            app:destination="@id/nav_tools" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="wertexpro.fvds.svaroggraphs.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_nav_tools_to_nav_share"
            app:destination="@id/nav_share" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="wertexpro.fvds.svaroggraphs.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />


</navigation>